--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue-carousel": "^0.18.0",
+    "vue-router": "^3.2.0",
+    "vue-typical": "^1.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
