--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-carousel": "^0.18.0",
+    "vue-clickaway": "^2.2.2",
+    "vue-flag-icon": "^1.0.6",
+    "vue-i18n": "^8.24.5",
     "vue-router": "^3.2.0",
-    "vue-typical": "^1.6.2"
+    "vue-typical": "^1.6.2",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
