--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "core-js": "^3.6.5",
     "v-img": "^0.2.0",
     "vue": "^2.6.11",
