--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
     "core-js": "^3.6.5",
+    "emailjs-com": "^3.2.0",
     "v-img": "^0.2.0",
     "vue": "^2.6.11",
     "vue-carousel": "^0.18.0",
