--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-flag-icon": "^1.0.6",
     "vue-i18n": "^8.24.5",
     "vue-router": "^3.2.0",
+    "vue-sweetalert2": "^5.0.2",
     "vue-typical": "^1.6.2",
     "vuex": "^3.6.2"
   },
